wf-all-2-transformers/myproject/k8s/manifests/cfnodejsapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: cfnodejsapp
  name: cfnodejsapp
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: cfnodejsapp
  type: ClusterIP
status:
  loadBalancer: {}
